--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -40,22 +40,21 @@
 
                  <!-- User's Name -->
                  <label for="fullname">Full Name:</label>
-                 <input type="text" id="fullname" name="name" required><br><br>
+                 <input type="text" id="fullname" name="name" required>
 
                    <!-- User's Email -->
                  <label for="email">Email Address:</label>
-                 <input type="email" id="email" name="email" required><br><br>
+                 <input type="email" id="email" name="email" required>
 
     <!-- Purpose Selection -->
-                 <p>Purpose of your message:</p>
-                    <label for="general"><input type="radio" id="general" name="purpose" value="general" required> General Inquiry</label><br>
-                    <label for="reservation"><input type="radio" id="reservation" name="purpose" value="reservation"> Reservation Question</label><br>
-                    <label for="suggestion"><input type="radio" id="suggestion" name="purpose" value="suggestion"> Website Suggestion</label><br><br>
-
+                   <p>Purpose of your message:</p>
+          <label><input type="radio" name="purpose" value="general" required> General Inquiry</label>
+          <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
+          <label><input type="radio" name="purpose" value="suggestion"> Website Suggestion</label>
 
     <!-- Message Textarea -->
-                <label for="message">Your Message:</label><br>
-                <textarea id="message" name="message" rows="5" cols="40" required></textarea><br><br>
+                <label for="message">Your Message:</label>
+                <textarea id="message" name="message" rows="5"  required></textarea><br><br>
 
     <!-- Newsletter Subscription -->
                <input type="checkbox" name="subscribe" value="yes">
