--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -59,7 +59,9 @@
     <!-- Newsletter Subscription -->
                <input type="checkbox" id="subscribe" name="subscribe" value="yes">
 
-    <!-- Submit Button -->
+    <!-- Submit Button --> 
+                <button type="submit">Send Message</button>
+
                <label for="subscribe">Please subscribe me to the monthly Newsletter</label>
 
   </fieldset>
@@ -94,7 +96,6 @@
             <h1>Jinja Rafting Site</h1>
 
             <article>
-                <h2>Jinj  Rafting mission</h2>
                 <p>jinja Rafting Site , our mission is to offer unforgettable white-water adventures that connect
                     people to the spirit
                     of Uganda’s rivers through professionalism, safety, and heart. We believe in courage, connection,
