--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page| Jinja  Rafting site</title>
     <meta name="description" content="This is Contact us page for Rafting website.">
-    <meta name="author" content="Yakan Frank">
+    <meta name="author" content="Contact Us Page">
     <link rel="stylesheet" href="styles/rafting.css">
 
     <!-- ✅ Google Fonts -->
