--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,6 +33,7 @@
             <h1>Jinja Rafting Site</h1>
 
             <article>
+                 <h2>Our Rafting Adventures</h2>
                 <p>Jinja Rafting Site , our mission is to offer unforgettable white-water adventures that connect
                     people to the spirit
                     of Uganda’s rivers through professionalism, safety, and heart. We believe in courage, connection,
@@ -90,7 +91,7 @@
                 <figure>
                     <img src="images/rafting60.webp" alt="Rafting in Uganda">
                     <figcaption>Welcome to jinja for rafting</figcaption>
-                    </figcaption>
+                
                 </figure>
             </div>
         </section>
