--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -96,6 +96,7 @@
             <h1>Jinja Rafting Site</h1>
 
             <article>
+                    <h2>Our Rafting Adventures</h2>
                 <p>jinja Rafting Site , our mission is to offer unforgettable white-water adventures that connect
                     people to the spirit
                     of Uganda’s rivers through professionalism, safety, and heart. We believe in courage, connection,
